# dos-emulator

./: .gitignore  Cargo.toml
enumflags/: Cargo.toml
enumflags-derive/: Cargo.toml
enumflags-derive/src/: lib.rs
enumflags-example/: Cargo.toml
enumflags-example/src/: lib.rs
enumflags/src/: container.rs  lib.rs
src/: cpu.rs  lib.rs
src/cpu/: alu.rs  int.rs  mem.rs  reg.rs  stack.rs
tests/objects/: proc.out
tests/source/: proc.asm
tests/src/: Makefile  alu.asm  cmp.asm  fib.asm  int.asm  jmp.asm  jmp_cond.asm  lea.asm  proc.asm
utils/assembler/: assembler.py
utils/opcode_genenrator/: main.py
xtreme86/: Cargo.toml
xtreme86/examples/: Makefile  main.rs  print.asm
xtreme86/src/: cpu.rs  lib.rs
xtreme86/src/cpu/: alu.rs  flags.rs  int.rs  jmp.rs  mem.rs  reg.rs  stack.rs
xtreme86/src/cpu/instruction/: args.rs  data.rs  mod.rs  opcode.rs
xtreme86/src/cpu/instruction/actions/: alu.rs  flags.rs  int.rs  io.rs  jmp.rs  mem.rs  mod.rs  stack.rs
xtreme86/src/peripheral/: mod.rs
xtreme86/tests/: test_io.rs  tests.rs
xtreme86/tests/assets/src/: Makefile  alu.asm  cmp.asm  ex.asm  far.asm  flag.asm  int.asm  io.asm  jmp.asm  jmp_cond.asm  lea.asm  load.asm  proc.asm  seg.asm  shift.asm  str.asm
