[package]
name = "enumflags-example"
version = "0.1.0"
authors = ["Tomer Ayal <tomer.trc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags-derive = { path = "../enumflags-derive" }
enumflags = { path = "../enumflags" }
